# fast-mae-lite

./: .gitignore  README.md  TODO.md  demo_inference.py  pyproject.toml
fml/: model.py  utils.py
profile/: profile_model.py
src/fml/: __init__.py  attention.py  block.py  config.py  decoder.py  encoder.py  legacy_weights.py  mlp.py  model.py  pos.py  utils.py
tests/: test_model.py
train/: config.py  data.py  main.py  opt.py  training.py
train/config/: base.yaml  config.yaml  data_bound.yaml  few_images.yaml  large_batch.yaml  peak.yaml  preload.yaml  sweep.yaml
