[project]
name = "fml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pillow-simd>=9.5.0.post2",
    "pytest>=8.3.3",
    "timm>=1.0.11",
    "torch>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
testpaths = ["tests", "integration"]
pythonpath = ["."]
